refactor[#14] : Page 객체 리팩토링